Fixed layout issues with media query

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 	width: 100%;
 	padding: 6%;
 	text-decoration: none;
+	font-size: 3vw;
 }
 
 .registration-page:hover,
@@ -168,6 +169,8 @@ img {
 
 	.registration-page {
 		padding: 8%;
+		color: var(--Violet);
+		font-size: 1.5vw;
 	}
 
 	.illustration-image-container {
